    - moved Entity-class into entity/Entity.py
    - chunk <-> entity know of each other now
    - added EntityHandler with entity-registry
    - made function draw and tick called of entity
    - added EntityRenderer with parser of model files
    - added renderer for player
    - added saves for entities
    - added /summon command
    - added loading phase for entities


changelog of master-branch
    - added new event: "stage:blockitemfactory:finish"
    - cleaned up base classes for block and item
    - chunk entries containing positions are mostly stored relative to the chunk decreasing save file size
    - changed some internal inventory interaction things
    - on_shift_click can now return True when it should interrupt the following logic
    - slots can now handle an key press
    - rewritten mouse interaction system to support dragging over more than one slot & better shift-clicking

    fixed bugs:
        - game gives out exceptions when trying to load an non-existing world
        - internal mouse-position error when dragging
        - block-looking-at position lable was inverted to the gamerule
        - crash when inventory slot count decreases between two loads of an world


changelog of snapshot 20w12b [released on 21.03.2020]
    - added dimension definition for nether and end
    - removed deprecated loading phases
    - removed features.py as it was outdated
    - world is now saved when window is closed (only when in the state)
    - added mycelium block, podzol block, barrier block
    - added barrier item
    - .lang files can now be also loaded
    - added support for uv rotation in element of block-models
    - BlockFactory accepts now also an state-str like in block-state-files in setDefaultModelState

    fixed bugs:
        - Chunk.add_block did NOT accept the non-prefixed block-names like "stone"
        - icon for half hunger was not rendered correctly