@@ -10,6 +10,8 @@ from base64 import b64decode
 
 import requests
 import globals as G
+import os
+import logger
 
 DEBUG = False
 SIMULATE = False
@@ -29,13 +31,6 @@ class SimulatedResponse(object):
         if self.is_json:
             return json.loads(self.content)
         return None
-
-
-def fail(msg, verbose_msg):
-    print(msg, file=sys.stderr)
-    if DEBUG:
-        print(verbose_msg, file=sys.stderr)
-    sys.exit(1)
 
 
 def find_texture_info(properties):
@@ -70,7 +65,14 @@ def get_url(url, **kwargs):
         return requests.get(url, **kwargs)
 
 
-def download_skin(username):
+def download_skin(username: str, store: str):
+    if os.path.isfile(G.local+"/build/skin_{}.png".format(username)):
+        print("loading skin from cache...")
+        shutil.copy(G.local+"/build/skin_{}.png".format(username), store)
+        return
+    print("downloading skin for '{}'".format(username))
+    if os.path.exists(store):
+        os.remove(store)
 
     r = get_url(userid_url.format(username=username))
     if r.status_code != 200: raise ValueError()
@@ -78,15 +80,20 @@ def download_skin(username):
 
     r = get_url(userinfo_url.format(userid=userid))
     userinfo = r.json()
-    texture_info = find_texture_info(userinfo['properties'])
+    if "error" in userinfo:
+        logger.println("[SERVER] {}: {}".format(userinfo["error"], userinfo["errorMessage"]))
+        raise ValueError()
+    try:
+        texture_info = find_texture_info(userinfo['properties'])
+    except KeyError:
+        logger.println("ParseError in '{}'".format(userinfo))
+        raise
     if texture_info is None: raise ValueError()
 
-    try:
-        skin_url = texture_info['textures']['SKIN']['url']
-    except:
-        raise ValueError() from None
+    skin_url = texture_info["textures"]["SKIN"]["url"]
     r = get_url(skin_url, stream=True)
     if r.status_code != 200: raise ValueError()
-    with open(G.tmp.name+"/skin.png", 'wb') as f:
-        shutil.copyfileobj(r.raw, f)
-
+    with open(store, 'wb') as f:
+        f.write(r.content)
+    with open(G.local+"/build/skin_{}.png".format(username), "wb") as f:
+        f.write(r.content)
