@@ -1013,6 +1013,7 @@ started these clone on 12th of July, 2019
 [uuk]: ParsingCommandInfo uses now entity for various filling operations when not all kwargs are set
 [uuk]: added various aspects to the selectors
 [uuk]: merged dev-branch; changed introduced storage version from 4 to 5
+[uuk]: skins will be applied when arrival by player name. In case of not existent, the default skin is used
 
 todo: fix bug: player is not rendered when exiting generated chunks when barrier is deactivated -> chunk rendering flag
     not used correctly in this case; relates to: when generating new world, entities are not visible
